--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <script src="script.js"></script>
 </body>
 </html>
-<button onclick="alert('Хелоу, я люблю Софію!')">Софія натисни!</button>
+<button onclick="alert('Хелоу, Оксана я в ахуї!')">Оксана натисни!</button>
 <button onclick="resetBackground()">Скинути колір</button> <!-- Нова кнопка -->
 
     <script src="script.js"></script>
